--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,137 @@
 body {
-
+    background-image: url("../images/full-bloom.png");
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 18px;
+    margin: 0;
+   
+}
+#container {
+    width: 960px;
+    background-color: black;
+    margin: 0 auto;
 }
 header {
-
+    background-color: #ffffff;
+    border-bottom: #cccccc 2px solid;
+    min-width: 960px;
 }
-h1 {
 
-
+header::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+#name {
+    background-color: #4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    float: left;
+    color: white;
+    padding: 24px;
+    margin: 0;
+    font-size: 28px;
 }
 nav {
-
+    float: right;
+    min-width: 200px;
 }
+
 ul {
-
+    margin: 0;
 }
 
- li {
-
-
+li {
+    display: inline-block;
+    padding: 0 10px 0 10px;
+    margin: 30px 0 0 0;
+}
+.li {
+    border-right: 1px solid #e8e8e8;
 }
 a {
+    display: block;
+    text-decoration: none;
+    padding: 0;
+    color: #777777;
+    font-weight: 400;
 
 }
-#main {
+a:hover {
 
+    color: #4aaaa5;
+}
+#content {
+    width: 960px;
+    margin: 0 auto;
+}
+div#main {
+    margin-top: 30px;
+    padding: 20px;
+    background-color: white;
 }
 h2 {
+    color: #4aaaa5;
+    padding-bottom: 20px;
+    border-bottom: 3px solid #dddddd;
 
+}
+p {
+    line-height: 1.5em;
+
+    
 }
 #profile_photo {
+    padding: 0 20px 20px 0;
+    width: 200px;
+    float: left;
 }
-footer {
 
+footer {
+    color:  #dddddd;
+    padding: 40px 0 5px 0;
+    background-color: #666666;
+    border-top: 8px solid #4aaaa5;
+    text-align: center;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0px;
+    font-size: .7em;
+    min-width: 960px;;
+}
+
+input {
+    padding: 8px;
+    width: 97%;
+    font-size: 1em;
+    color: #666666;
+    margin: 0;
+
+}
+#submit {
+    margin-top: 10px;
+    padding: 10px 30px;;
+    background-color: #4aaaa5;
+    color: white;
+    font-size: 1em;
+    width: 15%;
+}
+
+div#Name {
+    padding-bottom: 5px;
+}
+div#email {
+    padding: 12px 0 5px 0;
+
+}
+div#msg {
+    padding: 12px 0 5px 0;
+}
+textarea {
+    resize: vertical;
+    color: #666666;
+    border: 1px solid #cccccc;
+    font-size: 1em;
+    width: 98.3%;
+    height: 180px;
 }
