--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,12 @@
+
+
 body {
     background-image: url("../images/full-bloom.png");
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 18px;
-    margin: 0;
-   
+    margin:0;
+    padding: 0;
 }
 #container {
     width: 960px;
@@ -22,12 +24,12 @@ header::after {
     display: table;
     clear: both;
 }
-#name {
+#header_name {
     background-color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
     float: left;
     color: white;
-    padding: 24px;
+    padding: 30px;
     margin: 0;
     font-size: 28px;
 }
@@ -57,28 +59,48 @@ a {
 
 }
 a:hover {
-
     color: #4aaaa5;
 }
 #content {
-    width: 960px;
-    margin: 0 auto;
+    height: 100%;
+    position: relative;
 }
-div#main {
-    margin-top: 30px;
-    padding: 20px;
+div#content-wrap {
+    width: 900px;
+    margin: 20px auto 9em auto;
+    padding: 1em 30px 0 30px;
     background-color: white;
+    border: 1px solid #dddddd;
 }
 h2 {
     color: #4aaaa5;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
     border-bottom: 3px solid #dddddd;
-
 }
 p {
     line-height: 1.5em;
-
-    
+}
+.portfolio_img {
+    width: 200px;
+    padding: 0;
+}
+.img_wrap {
+    position: relative;
+}
+td {
+    padding: 15px 25px 20px 0;
+}
+.link_name {
+    background-color: #4aaaa5;
+    position: absolute;
+    bottom: 7%;
+    left: 1%;
+    margin: 0;
+    padding: 15px 0 15px 0;
+    color: white;
+    text-align: center;
+    left:0;
+    right:0;
 }
 #profile_photo {
     padding: 0 20px 20px 0;
@@ -92,12 +114,11 @@ footer {
     background-color: #666666;
     border-top: 8px solid #4aaaa5;
     text-align: center;
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0px;
+    position: absolute;
+    bottom: 0;
     font-size: .7em;
-    min-width: 960px;;
+    left:0;
+    right:0;
 }
 
 input {
@@ -106,10 +127,11 @@ input {
     font-size: 1em;
     color: #666666;
     margin: 0;
+    outline: none;
 
 }
 #submit {
-    margin-top: 10px;
+    margin: 10px 0 20px 0;
     padding: 10px 30px;;
     background-color: #4aaaa5;
     color: white;
@@ -132,6 +154,7 @@ textarea {
     color: #666666;
     border: 1px solid #cccccc;
     font-size: 1em;
-    width: 98.3%;
+    width: 98.6%;
     height: 180px;
+    outline: none;
 }
