--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
-
+html, body {
+    height: 100%;
+}
 
 body {
-    background-image: url("../images/full-bloom.png");
+    background-image: url("../images/paper.png");
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 18px;
@@ -60,17 +62,18 @@ a {
 }
 a:hover {
     color: #4aaaa5;
+
 }
 #content {
-    height: 100%;
-    position: relative;
+    min-height: 100%;
 }
 div#content-wrap {
     width: 900px;
     margin: 20px auto 9em auto;
-    padding: 1em 30px 0 30px;
+    padding: 1em 30px 100px 30px;
     background-color: white;
     border: 1px solid #dddddd;
+    overflow: auto;
 }
 h2 {
     color: #4aaaa5;
@@ -84,12 +87,17 @@ p {
     width: 200px;
     padding: 0;
 }
+.img_wrap:hover {
+    font-size: 21px;
+}
 .img_wrap {
     position: relative;
+   
 }
 td {
     padding: 15px 25px 20px 0;
 }
+
 .link_name {
     background-color: #4aaaa5;
     position: absolute;
@@ -114,7 +122,7 @@ footer {
     background-color: #666666;
     border-top: 8px solid #4aaaa5;
     text-align: center;
-    position: absolute;
+    position: relative;
     bottom: 0;
     font-size: .7em;
     left:0;
@@ -130,6 +138,7 @@ input {
     outline: none;
 
 }
+
 #submit {
     margin: 10px 0 20px 0;
     padding: 10px 30px;;
@@ -137,6 +146,7 @@ input {
     color: white;
     font-size: 1em;
     width: 15%;
+    box-shadow: 2px 2px 5px #4aaaa5;
 }
 
 div#Name {
